# perplexity-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  start-ui.sh  token_pool_config.example.json
docs/plans/: 2026-02-14-bugfix-audit.md  2026-02-14-client-pool-refactor-design.md
perplexity/: __init__.py  client.py  config.py  exceptions.py
perplexity/server/: __init__.py  admin.py  app.py  client_pool.py  main.py  utils.py
perplexity/server/web/: index.html  package-lock.json  package.json  tailwind.config.mjs  vite.config.ts
perplexity/server/web/src/: index.css  index.tsx
perplexity/server/web/src/components/: AddTokenModal.tsx  App.tsx  AuthBar.tsx  ConfirmModal.tsx  MonitorPanel.tsx  StatsGrid.tsx  TokenTable.tsx
perplexity/server/web/src/components/logs/: LogsPanel.tsx
perplexity/server/web/src/components/ui/: Modal.tsx  StatCard.tsx  Toast.tsx  Toggle.tsx
perplexity/server/web/src/hooks/: useLogs.ts  usePool.ts
perplexity/server/web/src/lib/: api.ts
src/: __init__.py  perplexity_client.py  server.py  tools.py
tests/: test_client_pool.py  test_config.py  test_mcp.py  test_oai.py  test_research_downgrade.py  test_retry_failover.py  test_retry_logic.py  test_utils.py
