[project]
name = "perplexity-mcp"
version = "0.2.0"
description = "Unofficial Perplexity MCP server using cookies for free Pro access"
requires-python = ">=3.10"
dependencies = [
    "perplexity-api @ git+https://github.com/helallao/perplexity-ai.git",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "websocket-client>=1.5.0",
]

[project.scripts]
perplexity-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
